--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "astro-nx-depla",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-  },
+  "scripts": {},
   "private": true,
-  "dependencies": {
-  },
   "devDependencies": {
-    "nx": "15.7.2",
     "@nrwl/workspace": "15.7.2",
-    "typescript": "~4.8.2",
-    "prettier": "^2.6.2"
+    "@nxtensions/astro": "^3.3.0",
+    "nx": "15.7.2",
+    "prettier": "^2.6.2",
+    "typescript": "~4.8.2"
   }
 }
