--- a/package.json
+++ b/package.json
@@ -2,13 +2,27 @@
   "name": "astro-nx-depla",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "postinstall": "node ./tools/scripts/patch-nx-cli.js"
+  },
   "private": true,
   "devDependencies": {
+    "@nrwl/cypress": "15.7.2",
+    "@nrwl/eslint-plugin-nx": "15.7.2",
+    "@nrwl/linter": "15.7.2",
     "@nrwl/workspace": "15.7.2",
     "@nxtensions/astro": "^3.3.0",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "astro": "^2.0.0",
+    "cypress": "^12.2.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
-  }
+  },
+  "dependencies": {}
 }
