--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "astro": "^2.0.0",
+    "astro": "^2.0.14",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -24,5 +24,8 @@
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@astrojs/tailwind": "^3.0.1",
+    "tailwindcss": "^3.2.7"
+  }
 }
