generate website/config lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@astro-nx-depla/common": ["libs/common/src/index.js"]
+      "@astro-nx-depla/common": ["libs/common/src/index.js"],
+      "@astro-nx-depla/website/config": ["libs/website/config/src/index.js"]
     }
   },
   "exclude": ["node_modules", "tmp"]
