--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.0.1",
+    "astro-icon": "^0.8.0",
+    "limax": "^2.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
