--- a/package.json
+++ b/package.json
@@ -7,24 +7,34 @@
   },
   "private": true,
   "devDependencies": {
+    "@astrolib/seo": "^0.3.0",
     "@nrwl/cypress": "15.7.2",
     "@nrwl/eslint-plugin-nx": "15.7.2",
     "@nrwl/linter": "15.7.2",
     "@nrwl/workspace": "15.7.2",
     "@nxtensions/astro": "^3.3.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "astro": "^2.0.14",
+    "astro": "^2.0.15",
+    "astro-compress": "^1.1.35",
+    "astro-netlify-cms": "^0.5.3",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "mdast-util-to-string": "^3.1.1",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
+    "reading-time": "^1.5.0",
     "typescript": "~4.8.2"
   },
   "dependencies": {
+    "@astrojs/image": "^0.15.1",
+    "@astrojs/mdx": "^0.17.2",
+    "@astrojs/partytown": "^1.0.3",
+    "@astrojs/sitemap": "^1.1.0",
     "@astrojs/tailwind": "^3.0.1",
     "astro-icon": "^0.8.0",
     "limax": "^2.1.0",
