--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@astrojs/rss": "^2.1.1",
     "@astrolib/seo": "^0.3.0",
     "@nrwl/cypress": "15.7.2",
     "@nrwl/eslint-plugin-nx": "15.7.2",
