--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,6 +1,26 @@
 {
   "devDependencies": {
     "@astrolib/analytics": "^0.3.0",
-    "@fontsource/inter": "^4.5.15"
+    "@fontsource/alatsi": "^4.5.11",
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/shadows-into-light-two": "^4.5.9",
+    "netlify-cms-app": "^2.15.72"
+  },
+  "dependencies": {
+    "@astrojs/react": "^2.0.2",
+    "@mdx-js/mdx": "^2.3.0",
+    "acorn": "^8.8.2",
+    "hast-util-raw": "^8.0.0",
+    "hast-util-sanitize": "^4.1.0",
+    "hast-util-to-jsx-runtime": "^1.2.0",
+    "mdast-util-from-markdown": "^1.3.0",
+    "mdast-util-mdx-jsx": "^2.1.2",
+    "mdast-util-to-hast": "^12.3.0",
+    "micromark-extension-mdx-jsx": "^1.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "resolutions": {
+    "react": "^17.0.2"
   }
 }
