commit nx plugin changes part2

--- a/nx.json
+++ b/nx.json
@@ -11,6 +11,9 @@
         "{workspaceRoot}/.eslintrc.json",
         "{workspaceRoot}/.eslintignore"
       ]
+    },
+    "test": {
+      "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"]
     }
   },
   "tasksRunnerOptions": {
