--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "@astrojs/rss": "^2.1.1",
     "@astrolib/seo": "^0.3.0",
     "@nrwl/cypress": "15.7.2",
+    "@nrwl/devkit": "15.7.2",
     "@nrwl/eslint-plugin-nx": "15.7.2",
+    "@nrwl/jest": "15.7.2",
+    "@nrwl/js": "15.7.2",
     "@nrwl/linter": "15.7.2",
     "@nrwl/workspace": "15.7.2",
     "@nxtensions/astro": "^3.3.0",
+    "@swc-node/register": "^1.4.2",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.2.173",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -25,10 +32,15 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
+    "jsonc-eslint-parser": "^2.1.0",
     "mdast-util-to-string": "^3.1.1",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
     "reading-time": "^1.5.0",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
     "typescript": "~4.8.2"
   },
   "dependencies": {
@@ -37,8 +49,12 @@
     "@astrojs/partytown": "^1.0.3",
     "@astrojs/sitemap": "^1.1.0",
     "@astrojs/tailwind": "^3.0.1",
+    "@nrwl/nx-plugin": "^15.7.2",
+    "@swc/helpers": "~0.4.11",
     "astro-icon": "^0.8.0",
     "limax": "^2.1.0",
-    "tailwindcss": "^3.2.7"
+    "netlify-identity-widget": "^1.9.2",
+    "tailwindcss": "^3.2.7",
+    "tslib": "^2.3.0"
   }
 }
