--- a/libs/shared/utils/project.json
+++ b/libs/shared/utils/project.json
@@ -1,12 +1,9 @@
 {
   "name": "shared-utils",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/utils",
+  "sourceRoot": "libs/shared/utils/src",
   "projectType": "library",
   "targets": {
-    "check": {
-      "executor": "@nxtensions/astro:check"
-    }
   },
   "tags": []
 }
