--- a/libs/shared/utils/tsconfig.json
+++ b/libs/shared/utils/tsconfig.json
@@ -1,26 +1,24 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    // Enable top-level await, and other modern ESM features
-    "target": "ESNext",
-    "module": "ESNext",
-    // Enable node-style module resolution, for things like npm package imports
-    "moduleResolution": "node",
-    // Enable JSON imports
-    "resolveJsonModule": true,
-    // Enable stricter transpilation for better output
-    "isolatedModules": true,
-    // Astro directly run TypeScript code, no transpilation needed
-    "noEmit": true,
-    // Report an error when importing a file using a casing different from the casing on disk
-    "forceConsistentCasingInFileNames": true,
-    // Properly support importing CJS modules in ESM
     "esModuleInterop": true,
-    // Skip typechecking libraries and .d.ts files
-    "skipLibCheck": true,
-    // Enable strict mode
+    "module": "commonjs",
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    // Error when a value import is only used as a type
-    "importsNotUsedAsValues": "error"
-  }
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vitest"]
+  },
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
+  ]
 }
