--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "astro-icon": "^0.8.0",
     "limax": "^2.1.0",
     "netlify-identity-widget": "^1.9.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tailwindcss": "^3.2.7",
     "tslib": "^2.3.0"
   }
