--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nrwl/jest": "15.7.2",
     "@nrwl/js": "15.7.2",
     "@nrwl/linter": "15.7.2",
+    "@nrwl/vite": "^15.7.2",
     "@nrwl/workspace": "15.7.2",
     "@nxtensions/astro": "^3.3.0",
     "@swc-node/register": "^1.4.2",
@@ -25,6 +26,8 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitest/coverage-c8": "~0.25.8",
+    "@vitest/ui": "^0.25.8",
     "astro": "^2.0.15",
     "astro-compress": "^1.1.35",
     "astro-netlify-cms": "^0.5.3",
@@ -34,6 +37,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jsdom": "~20.0.3",
     "jsonc-eslint-parser": "^2.1.0",
     "mdast-util-to-string": "^3.1.1",
     "nx": "15.7.2",
@@ -41,7 +45,11 @@
     "reading-time": "^1.5.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "vite": "^4.0.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
   },
   "dependencies": {
     "@astrojs/image": "^0.15.1",
