--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,9 @@
     "paths": {
       "@astro-nx-depla/nx": ["libs/nx/src/index.ts"],
       "@astro-nx-depla/shared/ui": ["libs/shared/ui/src/index.js"],
+      "@astro-nx-depla/shared/util/config-provider": [
+        "libs/shared/util/config-provider/src/index.ts"
+      ],
       "@astro-nx-depla/shared/utils": ["libs/shared/utils/src/index.js"],
       "@astro-nx-depla/website/config": ["libs/website/config/src/index.js"]
     }
