--- a/libs/website/data-access/post/tsconfig.json
+++ b/libs/website/data-access/post/tsconfig.json
@@ -10,7 +10,7 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["vitest"]
   },
-  "files": [],
+  "files": ["../../../../apps/website/.astro/types.d.ts"],
   "include": [],
   "references": [
     {
