--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,10 @@
       "@astro-nx-depla/shared/util/config-provider": [
         "libs/shared/util/config-provider/src/index.ts"
       ],
-      "@astro-nx-depla/shared/utils": ["libs/shared/utils/src/index.js"],
+      "@astro-nx-depla/shared/utils": ["libs/shared/utils/src/index.ts"],
+      "@astro-nx-depla/util/formatting": [
+        "libs/shared/util/formatting/src/index.ts"
+      ],
       "@astro-nx-depla/website/config": ["libs/website/config/src/index.js"],
       "@astro-nx-depla/website/data-access/post": [
         "libs/website/data-access/post/src/index.ts"
