generate shared/util/predict-reading-time lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,9 @@
       "@astro-nx-depla/util/formatting": [
         "libs/shared/util/formatting/src/index.ts"
       ],
+      "@astro-nx-depla/util/predict-reading-time": [
+        "libs/shared/util/astro-remark-plugin-predict-reading-time/src/index.ts"
+      ],
       "@astro-nx-depla/website/config": ["libs/website/config/src/index.js"],
       "@astro-nx-depla/website/data-access/post": [
         "libs/website/data-access/post/src/index.ts"
