--- a/apps/website/project.json
+++ b/apps/website/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/website/src",
+  "implicitDependencies": ["website-config", "shared-util-astro-remark-plugin-predict-reading-time"],
   "targets": {
     "build": {
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
