--- a/libs/shared/ui/package.json
+++ b/libs/shared/ui/package.json
@@ -1,7 +1,3 @@
 {
-  "name": "@astro-nx-depla/shared/ui",
-  "version": "0.0.1",
-  "devDependencies": {
-    "@astrolib/analytics": "^0.3.0"
-  }
+  "name": "@astro-nx-depla/shared/ui"
 }
