--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "private": true,
   "devDependencies": {
     "@astrojs/rss": "^2.1.1",
+    "@astrolib/analytics": "^0.3.0",
     "@astrolib/seo": "^0.3.0",
+    "@fontsource/alatsi": "^4.5.11",
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/shadows-into-light-two": "^4.5.9",
     "@nrwl/cypress": "15.7.2",
     "@nrwl/devkit": "15.7.2",
     "@nrwl/eslint-plugin-nx": "15.7.2",
@@ -40,6 +44,7 @@
     "jsdom": "~20.0.3",
     "jsonc-eslint-parser": "^2.1.0",
     "mdast-util-to-string": "^3.1.1",
+    "netlify-cms-app": "^2.15.72",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
     "reading-time": "^1.5.0",
@@ -49,39 +54,32 @@
     "vite": "^4.0.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.25.8",
-    "@fontsource/alatsi": "^4.5.11",
-    "@fontsource/inter": "^4.5.15",
-    "@fontsource/shadows-into-light-two": "^4.5.9",
-    "netlify-cms-app": "^2.15.72",
-    "@astrolib/analytics": "^0.3.0"
+    "vitest": "^0.25.8"
   },
   "dependencies": {
     "@astrojs/image": "^0.15.1",
     "@astrojs/mdx": "^0.17.2",
     "@astrojs/partytown": "^1.0.3",
+    "@astrojs/react": "^2.0.2",
     "@astrojs/sitemap": "^1.1.0",
     "@astrojs/tailwind": "^3.0.1",
+    "@mdx-js/mdx": "^2.3.0",
     "@nrwl/nx-plugin": "^15.7.2",
     "@swc/helpers": "~0.4.11",
-    "astro-icon": "^0.8.0",
-    "limax": "^2.1.0",
-    "netlify-identity-widget": "^1.9.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "tailwindcss": "^3.2.7",
-    "tslib": "^2.3.0",
-    "@astrojs/react": "^2.0.2",
-    "@mdx-js/mdx": "^2.3.0",
     "acorn": "^8.8.2",
+    "astro-icon": "^0.8.0",
     "hast-util-raw": "^8.0.0",
     "hast-util-sanitize": "^4.1.0",
     "hast-util-to-jsx-runtime": "^1.2.0",
+    "limax": "^2.1.0",
     "mdast-util-from-markdown": "^1.3.0",
     "mdast-util-mdx-jsx": "^2.1.2",
     "mdast-util-to-hast": "^12.3.0",
     "micromark-extension-mdx-jsx": "^1.0.3",
+    "netlify-identity-widget": "^1.9.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^3.2.7",
+    "tslib": "^2.3.0"
   }
 }
