--- a/apps/website/public/admin/config.yml
+++ b/apps/website/public/admin/config.yml
@@ -1,16 +1,12 @@
-# backend:
-#   name: git-gateway
-#   branch: main
 backend:
-  name: proxy
-  proxy_url: http://localhost:8081/api/v1
-  branch: master # optional, defaults to master
+  name: git-gateway
+  branch: main
 
 media_folder: 'apps/website/src/assets/images' # Folder where user uploaded files should go
 public_folder: '~/assets/images'
 
 publish_mode: editorial_workflow
-local_backend: true
+site_url: https://cluster.cam
 
 collections: # A list of collections the CMS should be able to edit
   - name: 'post' # Used in routes, ie.: /admin/collections/:slug/edit
