chore: allow import ES5 modules like ES6 ones

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@astro-nx-depla/nx": ["libs/nx/src/index.ts"],
       "@astro-nx-depla/shared/layout": ["libs/shared/layout/src/index.js"],
