--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "netlify-cms-app": "^2.15.72",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
+    "prisma": "^4.11.0",
     "reading-time": "^1.5.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
