--- a/libs/website/app/project.json
+++ b/libs/website/app/project.json
@@ -1,21 +1,21 @@
 {
-  "name": "website-db",
+  "name": "website-app",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/website/db/src",
+  "sourceRoot": "libs/website/app/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/website/db/**/*.ts"]
+        "lintFilePatterns": ["libs/website/app/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/website/db/jest.config.ts",
+        "jestConfig": "libs/website/app/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
