--- a/libs/shared/container/container/.eslintrc.json
+++ b/libs/shared/container/container/.eslintrc.json
@@ -4,9 +4,7 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {
-          "@typescript-eslint/ban-ts-comment": "warn"
-      }
+      "rules": {}
     },
     {
       "files": ["*.ts", "*.tsx"],
