--- a/libs/shared/container/project.json
+++ b/libs/shared/container/project.json
@@ -1,21 +1,21 @@
 {
-  "name": "shared-container-container",
-  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/container/container/src",
+  "name": "shared-container",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/shared/container/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/shared/container/container/**/*.ts"]
+        "lintFilePatterns": ["libs/shared/container/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/container/container/jest.config.ts",
+        "jestConfig": "libs/shared/container/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
