move environment to util

--- a/libs/shared/util/environment/project.json
+++ b/libs/shared/util/environment/project.json
@@ -1,21 +1,21 @@
 {
-  "name": "shared-utils-environment",
+  "name": "shared-util-environment",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/utils/environment/src",
+  "sourceRoot": "libs/shared/util/environment/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/shared/utils/environment/**/*.ts"]
+        "lintFilePatterns": ["libs/shared/util/environment/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/utils/environment/jest.config.ts",
+        "jestConfig": "libs/shared/util/environment/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
