--- a/libs/shared/util/url/project.json
+++ b/libs/shared/util/url/project.json
@@ -1,21 +1,21 @@
 {
-  "name": "shared-utils-url",
+  "name": "shared-util-url",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/utils/url/src",
+  "sourceRoot": "libs/shared/util/url/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/shared/utils/url/**/*.ts"]
+        "lintFilePatterns": ["libs/shared/util/url/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/utils/url/jest.config.ts",
+        "jestConfig": "libs/shared/util/url/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
