--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,23 +28,21 @@
         "libs/shared/types/html/src/index.ts"
       ],
       "@astro-nx-depla/shared/ui": ["libs/shared/ui/src/index.js"],
+      "@astro-nx-depla/shared/util/environment": [
+        "libs/shared/util/environment/src/index.ts"
+      ],
       "@astro-nx-depla/shared/util/formatting": [
         "libs/shared/util/formatting/src/index.ts"
+      ],
+      "@astro-nx-depla/shared/util/image": [
+        "libs/shared/util/image/src/index.ts"
       ],
       "@astro-nx-depla/shared/util/predict-reading-time": [
         "libs/shared/util/astro-remark-plugin-predict-reading-time/src/index.ts"
       ],
-      "@astro-nx-depla/shared/util/environment": [
-        "libs/shared/util/environment/src/index.ts"
-      ],
-      "@astro-nx-depla/shared/util/url": [
-        "libs/shared/util/url/src/index.ts"
-      ],
+      "@astro-nx-depla/shared/util/url": ["libs/shared/util/url/src/index.ts"],
       "@astro-nx-depla/website/app": ["libs/website/app/src/index.ts"],
       "@astro-nx-depla/website/config": ["libs/website/config/src/index.ts"],
-      "@astro-nx-depla/website/data-access/url": [
-        "libs/website/data-access/url/src/index.ts"
-      ],
       "@astro-nx-depla/website/entities/app": [
         "libs/website/entities/app/src/index.ts"
       ],
