--- a/libs/shared/util/time/project.json
+++ b/libs/shared/util/time/project.json
@@ -1,21 +1,21 @@
 {
-  "name": "shared-util-formatting",
+  "name": "shared-util-time",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/util/formatting/src",
+  "sourceRoot": "libs/shared/util/time/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/shared/util/formatting/**/*.ts"]
+        "lintFilePatterns": ["libs/shared/util/time/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/util/formatting/jest.config.ts",
+        "jestConfig": "libs/shared/util/time/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
