--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "postinstall": "node ./tools/scripts/patch-nx-cli.js"
+    "postinstall": "node ./tools/scripts/patch-nx-cli.js",
+    "prettier": "prettier -w apps/website/src libs/"
   },
   "private": true,
   "devDependencies": {
@@ -47,7 +48,8 @@
     "mdast-util-to-string": "^3.1.1",
     "netlify-cms-app": "^2.15.72",
     "nx": "15.7.2",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.4",
+    "prettier-plugin-astro": "^0.8.0",
     "prisma": "^4.11.0",
     "reading-time": "^1.5.0",
     "ts-jest": "28.0.5",
