move website data to separate lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -42,6 +42,7 @@
       "@astro-nx-depla/shared/util/url": ["libs/shared/util/url/src/index.ts"],
       "@astro-nx-depla/website/app": ["libs/website/app/src/index.ts"],
       "@astro-nx-depla/website/config": ["libs/website/config/src/index.ts"],
+      "@astro-nx-depla/website/data": ["libs/website/data/src/index.ts"],
       "@astro-nx-depla/website/entities/post": [
         "libs/website/entities/post/src/index.ts"
       ],
