--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
+    "strictNullChecks": true,
     "importsNotUsedAsValues": "error",
     "jsx": "react-jsx",
     "jsxImportSource": "react"
