--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwindcss": "^3.2.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^3.21.4"
   },
   "volta": {
     "node": "16.16.0"
