--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,12 @@
     "paths": {
       "@astro-nx-depla/nx": ["libs/nx/src/index.ts"],
       "@astro-nx-depla/shared/IOC": ["libs/shared/IOC/src/index.ts"],
+      "@astro-nx-depla/shared/entities/post": [
+        "libs/shared/entities/post/src/index.ts"
+      ],
+      "@astro-nx-depla/shared/entities/user": [
+        "libs/shared/entities/user/src/index.ts"
+      ],
       "@astro-nx-depla/shared/types/environment": [
         "libs/shared/types/environment/src/index.ts"
       ],
@@ -40,13 +46,7 @@
       "@astro-nx-depla/shared/util/url": ["libs/shared/util/url/src/index.ts"],
       "@astro-nx-depla/website/app": ["libs/website/app/src/index.ts"],
       "@astro-nx-depla/website/config": ["libs/website/config/src/index.ts"],
-      "@astro-nx-depla/website/data": ["libs/website/data/src/index.ts"],
-      "@astro-nx-depla/website/entities/post": [
-        "libs/website/entities/post/src/index.ts"
-      ],
-      "@astro-nx-depla/website/entities/user": [
-        "libs/website/entities/user/src/index.ts"
-      ]
+      "@astro-nx-depla/website/data": ["libs/website/data/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
