introduce astro facade where content is fetched

--- a/libs/shared/providers/content-astro/tsconfig.json
+++ b/libs/shared/providers/content-astro/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../../../tsconfig.base.json",
-  "files": ["../../../../apps/website/.astro/types.d.ts"],
+  "files": [],
   "include": [],
   "references": [
     {
