--- a/libs/website/app/tsconfig.json
+++ b/libs/website/app/tsconfig.json
@@ -1,6 +1,6 @@
 {
-  "extends": "../../../../tsconfig.base.json",
-  "files": ["../../../../apps/website/.astro/types.d.ts"],
+  "extends": "../../../tsconfig.base.json",
+  "files": [],
   "include": [],
   "references": [
     {
