--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "astro-netlify-cms": "^0.5.3",
     "cypress": "^12.2.0",
     "esbuild-plugin-alias": "^0.2.1",
+    "esbuild-plugin-replace": "^1.3.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
