depla-slice-astro-app

--- a/package.json
+++ b/package.json
@@ -24,10 +24,24 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.15.1",
+    "@astrojs/mdx": "^0.17.2",
+    "@astrojs/netlify": "^2.2.2",
+    "@astrojs/node": "^5.1.1",
+    "@astrojs/partytown": "^1.0.3",
+    "@astrojs/react": "^2.0.2",
+    "@astrojs/rss": "^2.1.1",
+    "@astrojs/sitemap": "^1.1.0",
     "@astrolib/analytics": "^0.3.0",
     "@astrolib/seo": "^0.3.0",
+    "@depla/astro-image": "^0.15.2",
+    "@depla/ioc": "^0.0.1",
+    "@depla/nx-astro": "^0.0.1",
+    "@depla/utils-astro-collections-facade": "^0.0.5",
+    "@depla/utils-astro-plugin-inject": "^0.0.1",
+    "@depla/utils-astro-plugin-predict-reading-time": "^0.0.6",
     "@depla/utils-db": "^0.0.1",
     "@depla/utils-environment": "^0.0.1",
+    "@depla/utils-image": "^0.0.4",
     "@depla/utils-js-object": "^0.0.7",
     "@depla/utils-time": "^0.0.3",
     "@depla/utils-url": "^0.0.4",
@@ -60,9 +74,21 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@unocss/astro": "^0.50.6",
+    "@unocss/preset-tagify": "^0.50.6",
+    "@unocss/preset-typography": "^0.50.6",
+    "@unocss/preset-web-fonts": "^0.50.6",
+    "@unocss/preset-wind": "^0.50.6",
+    "@unocss/transformer-directives": "^0.50.6",
+    "astro": "^2.3.0",
+    "astro-compress": "^1.1.35",
+    "astro-copy": "^0.0.8",
     "astro-icon": "^0.8.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "esbuild": "^0.17.10",
+    "esbuild-plugin-alias": "^0.2.1",
+    "esbuild-plugin-replace": "^1.3.0",
     "hast-util-sanitize": "^4.1.0",
     "hast-util-to-jsx-runtime": "^1.2.0",
     "lucide-react": "^0.233.0",
@@ -71,6 +97,7 @@
     "prismock": "^1.13.1",
     "react-day-picker": "^8.7.1",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "unocss-preset-daisy": "^3.0.1"
   }
 }
