--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# compiled output
-dist
-tmp
-/out-tsc
+.astro
+
+dev.db
+
+dev.db-journal
+
+prod.db
+
+.env
+
+.netlify
+
+prisma/generated/
+
+dist/
+
 
 # dependencies
 node_modules
